# Network-Interface-Intelligence-Platform-NIIP-

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  factory.py  main.py
app/api/: __init__.py  analysis.py  health.py
app/core/: __init__.py  config.py  exceptions.py  logging_config.py
app/ml/: __init__.py  anomaly_detector.py  forecaster.py  health_scorer.py  root_cause.py
app/ml/root_cause_v2/: __init__.py  bootstrap.py  embedder.py  engine.py  featurizer.py  incident_store.py  llm_client.py  parser.py  prompt_builder.py  schema.sql  types.py
app/ml/root_cause_v2/sop/: network_interface_rca.md
app/models/: __init__.py  interface.py
app/schemas/: __init__.py  api_schemas.py
app/services/: __init__.py  analysis_service.py
app/utils/: __init__.py  csv_loader.py  serializers.py
data/incidents/: incident_store.json  seed_incidents.json
data/input/: sample_logicmonitor_export.csv  sample_payload.json
docs/: root_cause_v2_architecture.md
frontend/: README.md  index.html  index.html:Zone.Identifier  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: FleetGrid.jsx  HealthChart.jsx  InterfaceDetail.jsx  StatusBar.jsx  SummaryTiles.jsx  Toast.jsx  UploadPanel.jsx
frontend/src/lib/: api.js  sampleData.js
frontend/src/styles/: global.css
tests/: conftest.py  test_api.py  test_csv_loader.py  test_ml_engines.py  test_root_cause_v2.py
